--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -12,9 +12,10 @@
     padding-left: 30px;
 }
 .homePic {
-    width: 24vw;
+    width: 15vw;
     display: inline-block;
-    margin: 0 auto;
+    margin: 0px 30px 50px 30px;
+    gap: 30px;
 }
 .picContainer {
     text-align: center;
@@ -28,5 +29,25 @@
 .howWeWorkContainer {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
+    grid-template-rows: repeat(2, 1fr);
+    gap: 40px;
+}
+.howWeWorkPara1 {
+    grid-column: 1/2;
+}
+.howWeWorkPara2 {
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+.howWeWorkPara3 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+.howWeWorkPara4 {
+    grid-column: 2/3;
+    grid-row: 2/3
+}
+span {
+    font-weight: bolder;
+    color: green;
 }
