--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -51,3 +51,10 @@ span {
     font-weight: bolder;
     color: green;
 }
+.testingPic {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    border: solid black 4px;
+}
