almost finished desktop view

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,4 +1,4 @@
-.mainTitle{
+/* .mainTitle{
     color: #00bc2f;
     font-size: 34px;
     font-weight: 700;
@@ -62,4 +62,4 @@ span {
     margin-right: auto;
     width: 50%;
     border: solid white 4px;
-}
+} */
