--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -1,7 +1,4 @@
-/* .homeWrapper {
-    background-color: #EAE8E8
-} */
-.labServices {
+/* .labServices {
     margin: 0px 1em;
 }
 .serviceCards {
@@ -56,4 +53,4 @@
 .labProdContainer {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-}
+} */
