--- a/src/Components/WaterQuality/WaterQuality.css
+++ b/src/Components/WaterQuality/WaterQuality.css
@@ -1,4 +1,4 @@
-.wqCaption {
+/* .wqCaption {
     color: darkred;
     margin: 5px 0px;
 }
@@ -16,4 +16,4 @@
 }
 .wqTitle {
     margin: 5px 0px;
-}
+} */
