--- a/src/Components/AboutUs/AboutUs.css
+++ b/src/Components/AboutUs/AboutUs.css
@@ -1,51 +1,54 @@
 .aboutContainer {
-    margin: 0px 21em;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    /* grid-template-rows: repeat(2, 1fr); */
-    /* column-gap: 30px 100px; */
+    margin:0px;
 }
-.aboutGrid {
-    margin: 20px 100px;
-}
-.aboutTitles {
-    color: #00bc2f;
-    font-size: 34px;
-    font-weight: 700;
-    margin-bottom: 0px;
-}
-hr {
-    margin-top: 0px;
-}
-.aboutPara {
-    font-size: 17px;
-    font-weight: 400;
-    line-height: 25px;
-}
-.aboutGrid2 {
-    margin: 100px 100px;
-    background-color: #696969;
-    color: white;
-    padding: 20px 0px 0px 20px;
-    width: 330px;
-    height: 420px;
-}
-.aboutList {
-    font-size: 16px;
-}
-.listTitle {
-    font-size: 20px;
-    font-weight: 800;
-}
-.available {
-    font-size: 25px;
-    font-weight: 800;
-    margin: 0px;
-}
-button {
-    background-color: #00BC2F;
-    color: white;
-    height: 35px;
-    width: 200px;
-    border-radius: 5px;
-}
+/* @media screen and (min-width:768px) {
+    .aboutContainer {
+        margin: 0px 21em;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .aboutGrid {
+        margin: 20px 100px;
+    }
+    .aboutTitles {
+        color: #00bc2f;
+        font-size: 34px;
+        font-weight: 700;
+        margin-bottom: 0px;
+    }
+    hr {
+        margin-top: 0px;
+    }
+    .aboutPara {
+        font-size: 17px;
+        font-weight: 400;
+        line-height: 25px;
+    }
+    .aboutGrid2 {
+        margin: 100px 100px;
+        background-color: #696969;
+        color: white;
+        padding: 20px 0px 0px 20px;
+        width: 330px;
+        height: 420px;
+    }
+    .aboutList {
+        font-size: 16px;
+    }
+    .listTitle {
+        font-size: 20px;
+        font-weight: 800;
+    }
+    .available {
+        font-size: 25px;
+        font-weight: 800;
+        margin: 0px;
+    }
+    button {
+        background-color: #00BC2F;
+        color: white;
+        height: 35px;
+        width: 200px;
+        border-radius: 5px;
+    }
+} */
