--- a/src/Components/AirQuality/AirQuality.css
+++ b/src/Components/AirQuality/AirQuality.css
@@ -1,4 +1,4 @@
-.aqList {
+/* .aqList {
     font-size: 16px;
     font-weight: 400;
     line-height: 25px;
@@ -19,4 +19,4 @@
 }
 .aqUL {
     padding: 0px;
-}
+} */
