--- a/src/Components/BulkMaterial/BulkMaterial.css
+++ b/src/Components/BulkMaterial/BulkMaterial.css
@@ -1,4 +1,4 @@
-.bulkPic {
+/* .bulkPic {
     height: 250px;
     border-radius: 50%;
 }
@@ -10,4 +10,4 @@
 .bulkSection3 {
     text-align: right;
     margin: 120px 0 0 0;
-}
+} */
