--- a/src/Components/Contacts/ContactForm.css
+++ b/src/Components/Contacts/ContactForm.css
@@ -2,20 +2,31 @@
     color: lightblue;
 } */
 .form-control {
-    width: 80vw;
-    height: 2em;
+    width: 25vw;
+    /* height: 2em; */
     margin-bottom: 1em;
     max-width: 800px;
+    border: 2.4px solid black;
 }
 textarea.form-control {
-    height: 20em;
+    height: 15em;
+    padding-bottom: 100px;
 }
-.col-9 {
-    margin-bottom: 3em;
-}
+/* .col-9 {
+    margin-bottom: 0px; 
+} */
 .btn {
     border-radius: 10px;
     color: black;
     height: 3em;
     width: 10em;
+    margin-bottom: 20px;
+}
+.contactTitle {
+    text-align: left;
+    margin-left: 6.5em;
+    font-weight: bolder;
+}
+.asterisk {
+    color: red;
 }
