--- a/src/Components/Contacts/Contacts.css
+++ b/src/Components/Contacts/Contacts.css
@@ -1,8 +1,14 @@
+/* @media screen and (min-width:768px) {
 .contactContainer {
     text-align: center;
     align-items: center;
-    height: 50vh;
     margin: 0em 25em;
-    padding: 90px;
+    padding: 110px 200px;
     background-color: lightgrey;
 }
+.contactContainer2 {
+    background-color: white;
+    border: 3px solid black;
+    padding: 10px 0px;
+}
+} */
