almost finished with mobile view

--- a/src/Components/AboutUs/AboutUs.css
+++ b/src/Components/AboutUs/AboutUs.css
@@ -1,5 +1,12 @@
 .aboutContainer {
-    margin:0px;
+    margin: 0px 30px;
+}
+.aboutGrid2 {
+    margin: 100px 100px;
+    background-color: #696969;
+    color: white;
+    padding: 20px 0px 0px 20px;
+    height: 420px;
 }
 /* @media screen and (min-width:768px) {
     .aboutContainer {
