--- a/src/Components/Contacts/ContactForm.css
+++ b/src/Components/Contacts/ContactForm.css
@@ -1,20 +1,16 @@
-/* h2 {
-    color: lightblue;
-} */
+.formContainer {
+    padding: 30px;
+}
 .form-control {
-    width: 25vw;
-    /* height: 2em; */
+    /* width: 25vw; */
     margin-bottom: 1em;
     max-width: 800px;
     border: 2.4px solid black;
 }
 textarea.form-control {
-    height: 15em;
+    height: 13em;
     padding-bottom: 100px;
 }
-/* .col-9 {
-    margin-bottom: 0px; 
-} */
 .btn {
     border-radius: 10px;
     color: black;
@@ -24,7 +20,6 @@ textarea.form-control {
 }
 .contactTitle {
     text-align: left;
-    margin-left: 6.5em;
     font-weight: bolder;
 }
 .asterisk {
