--- a/src/Components/WaterQuality/WaterQuality.css
+++ b/src/Components/WaterQuality/WaterQuality.css
@@ -1,3 +1,12 @@
+.wqPics {
+    height: 100px;
+    border-radius: 100%;
+}
+.wq1, .wq2, .wq3, .wq4 {
+    display: flex;
+    gap: 30px;
+    margin-bottom: 30px;
+}
 /* .wqCaption {
     color: darkred;
     margin: 5px 0px;
